infrastructure/prow/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prow
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-pods
