infrastructure/prow/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: prow
  name: hook
spec:
  selector:
    app: hook
  ports:
    - port: 8888
---
apiVersion: v1
kind: Service
metadata:
  namespace: prow
  name: deck
spec:
  selector:
    app: deck
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: prow
  name: tide
spec:
  selector:
    app: tide
  ports:
    - port: 80
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghproxy
  namespace: prow
  name: ghproxy
spec:
  ports:
    - name: main
      port: 80
      protocol: TCP
      targetPort: 8888
    - name: metrics
      port: 9090
  selector:
    app: ghproxy
  type: ClusterIP
